modules/gdscript/tests/scripts/analyzer/errors/array_destructuring_with_type_mismatch.gd
func test():
    var a: int
    var b: int
    var [a, b] = ["hello", 42]
